--- a/dialoglibrary/src/main/res/values/dimens.xml
+++ b/dialoglibrary/src/main/res/values/dimens.xml
@@ -4,4 +4,9 @@
     <dimen name="title_margin">10dp</dimen>
     <dimen name="progress_margin">24dp</dimen>
     <dimen name="progress_width">250dp</dimen>
+    <!--sweet dialog-->
+    <dimen name="alert_width">290dp</dimen>
+    <dimen name="common_circle_width">3dp</dimen>
+    <dimen name="progress_circle_radius">34dp</dimen>
+
 </resources>
